--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  background-image: linear-gradient(to right, #7bc6cc, #be93c5);
+}
+
 .current {
   background-color: coral;
   color: #fff;
@@ -18,7 +22,7 @@ li {
   margin: auto;
   width: 60vh;
   height: 50px;
-  background-color: lightgrey;
+  background-color: #efeeee;
   line-height: 50px;
 }
 
